# slate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  REVIEW.md  SECONDARY_USER_AUDIT.md  build.rs  dist-workspace.toml  install.sh
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/sketches/: MANIFEST.md
.serena/: project.yml
assets/: auto-typing-demo.sh  record-demo.sh  window_recorder.swift
benches/: performance.rs
docs/: DISTRIBUTION.md
resources/: dark-mode-notify.swift
resources/bat/: slate.tmTheme.template
resources/sfx/: LICENSE.md  README.md  SHA256SUMS
scripts/: bake-audio.sh  curate-sfx.sh  parse_tape_sfx.py  render-theme-gallery.sh  test-install-lifecycle.sh  test-secondary-user.sh
src/: detection.rs  env.rs  error.rs  lib.rs  main.rs  opacity.rs  wcag.rs  wcag.rs.bak
src/adapter/: alacritty.rs  bat.rs  delta.rs  eza.rs  fastfetch.rs  font.rs  ghostty.rs  kitty.rs  lazygit.rs  ls_colors.rs  marker_block.rs  mod.rs  nvim.rs  opencode.rs  palette_renderer.rs  registry.rs  starship.rs  tmux.rs  zsh_highlight.rs
src/brand/: cliclack_theme.rs  events.rs  language.rs  migration.rs  mod.rs  palette.rs  render_context.rs  roles.rs  sound_sink.rs
src/cli/: apply.rs  aura.rs  auto_theme.rs  clean.rs  commands.rs  config.rs  config_creation.rs  demo.rs  doctor.rs  failure_handler.rs  font.rs  font_detection.rs  font_selection.rs  hub.rs  init.rs  interactive.rs  list.rs  mod.rs  new_shell_reminder.rs  output.rs  picker.rs  picker_event_loop.rs  preflight.rs  preset_selection.rs  restore.rs  set.rs  setup.rs  setup_executor.rs  share.rs  share_screenshot.rs  sound.rs  status.rs  status_panel.rs  theme.rs  theme_apply.rs  theme_selection.rs  tool_selection.rs  watch.rs  wizard_core.rs  wizard_support.rs
src/config/: auto_theme.rs  backup.rs  backup_slatenv.patch  flags.rs  integration.rs  mod.rs  preferences.rs  shell_integration.rs  state_files.rs  tracked_state.rs
src/design/: colors.rs  file_type_colors.rs  mod.rs  nvim_highlights.rs  presets.rs  symbols.rs  typography.rs
src/error/: mod.rs
src/platform/: capabilities.rs  dark_mode_notify.rs  desktop.rs  fonts.rs  launchd.rs  mod.rs  packages.rs  portal.rs  share.rs  shell.rs  version_check.rs
src/theme/: catppuccin.rs  dracula.rs  everforest.rs  gruvbox.rs  mod.rs  (+4 more)
tests/: aggregate_dispatch_invariant.rs  baseline_backup.rs  bat_tmtheme_snapshots.rs  cli_global_flags.rs  docs_invariants.rs  eza_truecolor_smoke.rs  fastfetch_jsonc_generation.rs  font_integration.rs  install-script-smoke.sh  integration_apply_theme.rs  integration_cli.rs  integration_tests.rs  launchd_integration.rs  launchd_plist.rs  ls_colors_integration.rs  nvim_integration.rs  picker_full_preview_integration.rs  picker_preview_fixture.rs  picker_starship_fork_fixture.rs  restore_integration.rs  test_codegen.rs  theme_contrast_audit.rs  theme_tests.rs  tmux_seven_elements.rs  unit_adapter.rs  wave1_events.rs  wave4_events.rs  wave5_picker_events.rs  wave6_events.rs  wcag_audit_report_generator.rs
themes/: base16_ocean.json  catppuccin_latte.json  catppuccin_mocha.json  dracula.json  everforest.json  github_dark.json  gruvbox_dark.json  gruvbox_light.json  kanagawa.json  monokai.json  nord.json  one_dark.json  rose_pine.json  rose_pine_dawn.json  solarized_dark.json  solarized_light.json  themes.toml  tokyo_night.json  tokyo_night_light.json
xtask/: Cargo.toml
(+108 files in other folders)
