[workspace]
members = [".", "xtask"]

[package]
name = "slate-cli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "slate"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
atomic-write-file = "0.1"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.5.4"
color-eyre = "0.6"
crossterm = "0.27"
libc = "0.2"
plist = "1.0"
rayon = "1"
regex = "1"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"
which = "5"

[dev-dependencies]
rstest = "0.18"
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3"

[[bench]]
name = "performance"
harness = false
