[package]
name = "slate-cli"
version = "0.3.0"
edition = "2021"
build = "build.rs"
description = "Cross-platform terminal beautification kit for macOS and Linux"
homepage = "https://github.com/MoonMao42/slate"
repository = "https://github.com/MoonMao42/slate"
documentation = "https://github.com/MoonMao42/slate#readme"
license = "MIT"
keywords = ["terminal", "theme", "macos", "linux", "cli"]
categories = ["command-line-utilities"]
include = [
    "/src/**",
    "/tests/**",
    "/themes/**",
    "/resources/**",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/install.sh",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/dist-workspace.toml",
]

[package.metadata.dist]
dist = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "slate"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
atomic-write-file = "0.1"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.5.4"
color-eyre = "0.6"
console = "0.16"
crossterm = "0.27"
libc = "0.2"
rayon = "1"
regex = "1"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"
url = "2"
which = "5"
zbus = "4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
notify = "6"
predicates = "3"
rstest = "0.18"

[features]
default = []
# Gates integration tests that shell out to `nvim --headless`.
# CI enables this via rhysd/action-setup-vim@v1 + `cargo test --features has-nvim`.
has-nvim = []

[[bench]]
name = "performance"
harness = false
